--- a/capstoneproject1/dental/index.html
+++ b/capstoneproject1/dental/index.html
@@ -77,7 +77,7 @@
 			consequat.</p>
 		</div>
 		<div class="main3-2">
-			<img src="img.png">
+			<img src="images/img.png">
 		</div>
 	</div>
 	<div class="main4">
@@ -121,12 +121,12 @@
 			</center>
 		</div>
 		<div class="main6-2">
-			<img src="img1.png">
+			<img src="images/img1.png">
 		</div>
 	</div>
 	<div class="main7">
 		<center><h2>dental care</h2></center>
-		<img src="img3.png">
+		<img src="images/img3.png">
 	</div>
 	<div class="main8">
 		<center>
